src/test/deca/context/valid/oracle/type_float.deca
{
    float a;
    float f = 1.0;
}