src/test/deca/context/invalid/oracle/instanceof_op_wrong_left2.deca
{
    1.0 instanceof float;
}